--- a/Banking.ipynb
+++ b/Banking.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "421673c3",
+   "execution_count": 29,
+   "id": "f2382045",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "1288.05\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "p = 1385\n",
+    "r = .07\n",
+    "n = 1\n",
+    "t = 1\n",
+    "a = p * (1 + r*t)\n",
+    "A = a-p\n",
+    "print(p-A)\n"
+   ]
   }
  ],
  "metadata": {
